[package]
name = "bevy_dynamic"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", version = "0.5.0", default-features = false, features = [
  "bevy_dynamic_plugin",
  "bevy_gilrs",
  "bevy_gltf",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
] }

#bevy_lib = { path = "./crates/bevy_lib" }

async-compat = "0.2.1"

[dependencies.reqwest]
version = "0.11"
default-features = false

[features]
default = []
dynamic = ["bevy/dynamic"]