[package]
name = "bevy_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
async-compat = "0.2.1"

[dependencies.reqwest]
version = "0.11"
default-features = false

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
version = "0.5.0"
default-features = false

#features = ["dynamic"] # no effect